# go-hello-world

./: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  buildbuddy.yaml  codecov.yml  deps.bzl  go.mod  go.sum  multitool.lock.json
bazel/: go-get.sh
calculator/: BUILD.bazel  main.go
calculator/mathutils/: BUILD.bazel  mathutils.go  mathutils_test.go
helloworld/: BUILD.bazel  helloworld.go
helloworld/formatting/: BUILD.bazel  formatting.go  formatting_test.go
