load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@bazel_gazelle//language/proto",
        "@bazel_gazelle//language/go",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

# gazelle:prefix golang.kevinchen-verkada
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=bazel/workspace/go.mod",
        "-to_macro=deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)
