module(
    name = "kevinchen_verkada",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_multitool", version = "1.3.0")

# Multitool config
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
