load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = ["helloworld.go"],
    importpath = "golang.kevinchen-verkada/helloworld",
    visibility = ["//visibility:private"],
    deps = ["//helloworld/formatting"],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)
